--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "pg-workshop",
   "version": "1.0.0",
-  "description": "Workshop on pg-module",
+  "description": "A workshop to get familiar with postgres",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "dev:start": "node src/database/db_build.js && node src/server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NoureldeanSaed/pg-workshop.git"
+    "url": "git+https://github.com/shiryz/pg-workshop.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NoureldeanSaed/pg-workshop/issues"
+    "url": "https://github.com/shiryz/pg-workshop/issues"
   },
-  "homepage": "https://github.com/NoureldeanSaed/pg-workshop#readme",
-  "devDependencies": {
-    "nodemon": "^1.17.3"
-  }
+  "homepage": "https://github.com/shiryz/pg-workshop#readme",
+  "dependencies": {
+    "env2": "^2.2.0",
+    "nodemon": "^1.11.0",
+    "pg": "^6.2.3"
+  },
+  "devDependencies": {}
 }
